# flashy-cherry

./: .gitignore  README.md  requirements.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
interfaces/desktop/: pdf_info.py
interfaces/desktop/exceptions/: __init__.py
interfaces/desktop/models/: __init__.py  drop_pdf_list_model.py  pdf_info.py  pdf_info_model.py
interfaces/desktop/views/: __init__.py  drop_pdf_view.py
src/interfaces/desktop/exceptions/: pdf_info_exceptions.py
src/interfaces/desktop/models/: drop_pdf_list_model.py  pdf_info_model.py
src/interfaces/desktop/views/: drop_pdf_view.py
tests/: test_pdf_info_model.py
tests/interfaces/models/: test_drop_pdf_list_model.py  test_pdf_info_model.py
tests/tests_interfaces/standalones/: standalone_drop_pdf.py  standalone_pdf_info.py
tests/tests_interfaces/tests_desktop/: test_drop_pdf_list_model.py
