[metadata]
name = flashy-cherry
version = 0.1.0
description = Operations on PDFs.
author = Arnaud Jalbert
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
packages =
    interfaces
    interfaces.desktop
    interfaces.desktop.models
    interfaces.desktop.exceptions
install_requires =
    PyQt6 >= 6
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9
    tox>=3.24

[options.package_data]
interfaces = py.typed

[flake8]
max-line-length = 160
